--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,12 @@ julia:
 
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
+
+jobs:
+include:
+  - stage: "Documentation"
+    script:
+      - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
+                                              Pkg.instantiate()'
+      - julia --project=docs/ docs/make.jl
+    after_success: skip
