--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,11 @@ language: julia
 julia:
  - 1.5.1
 
+notifications:
+  email:
+    on_success: never
+    on_failure: always
+
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
 
@@ -12,4 +17,3 @@ jobs:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                 Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
-      after_success: skip
