--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ julia:
  - 1.5.1
 
 notifications:
-  email:
-    on_success: never
-    on_failure: always
+  email: false
+
+codecov: true
 
 after_success:
   - julia -e 'using Pkg; Pkg.add("Coverage"); using Coverage; Codecov.submit(process_folder())'
@@ -17,3 +17,4 @@ jobs:
         - julia --project=docs/ -e 'using Pkg; Pkg.develop(PackageSpec(path=pwd()));
                                                 Pkg.instantiate()'
         - julia --project=docs/ docs/make.jl
+      after_success: skip
